McAoU support reading files from Aws S3 folder